@@ -2,6 +2,7 @@ yarrp-0.7
 ---------
 * Add IPv6 EH support
 * Add ICMP MPLS extension support
+* FreeBSD verison >=11 fixes
 
 yarrp-0.6
 ---------
